# dungeonsofeternity

./: README.md  pyproject.toml  requirements.txt  test_api.py
docs/: ai_system.md  art_direction.md  core_mechanics.md  implementation.md  puzzle_design.md  qa.md  sound_design.md  technical_docs.md  ui_ux_design.md
dungeonsofeternity/: crew.py  main.py
dungeonsofeternity/config/: agents.yaml  tasks.yaml
src/dungeonsofeternity/: crew.py  crew_ai_agents.py
src/dungeonsofeternity/config/: agents.yaml  tasks.yaml
src/game/: balance.py  core_mechanics_design.py  core_mechanics_implementation.py  engine.py  game_engine_implementation.py  gameplay_implementation.py  main.py  run_game.py  ui_implementation.py  visual_asset_generation.py
src/game/assets/: asset_specifications.md
src/game/standalone/: game.html
src/game/web/: app.py
src/game/web/static/css/: style.css
src/game/web/static/js/: game.js
src/game/web/templates/: index.html
